--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hellp-app
+  name: hello-app
   labels:
-    run: hellp-app
+    run: hello-app
 spec:
   type: NodePort
   ports:
@@ -12,4 +12,4 @@ spec:
     protocol: TCP
     name: http
   selector:
-    run: hellp-app
+    run: hello-app
