--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -17,7 +17,7 @@ spec:
         image: hello
         ports:
           - containerPort: 80
-        imagePullPolicy: Always
+        imagePullPolicy: Never
         resources:
           limits:
             memory: 512Mi
