--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -14,10 +14,10 @@ spec:
     spec:
       containers:
       - name: hello-container
-        image: docker.io/hello
+        image: docker.io/juntunju2012/hello
         ports:
           - containerPort: 80
-        imagePullPolicy: Never
+        imagePullPolicy: Always
         resources:
           limits:
             memory: 512Mi
